--- a/FBXModule/FBXModule.vcxproj.filters
+++ b/FBXModule/FBXModule.vcxproj.filters
@@ -23,6 +23,8 @@
     <ClCompile Include="FBXShared_Converter.cpp" />
     <ClCompile Include="FBXShared_Material.cpp" />
     <ClCompile Include="FBXModule_Utilites.cpp" />
+    <ClCompile Include="FBXShared_Copy.cpp" />
+    <ClCompile Include="FBXModule_Copy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
