--- a/FBXModule/FBXModule.vcxproj
+++ b/FBXModule/FBXModule.vcxproj
@@ -68,6 +68,7 @@
     <ClInclude Include="..\include\FBXSkinnedMesh.hpp" />
     <ClInclude Include="..\include\FBXType.hpp" />
     <ClInclude Include="..\include\FBXUtilites.hpp" />
+    <ClInclude Include="AllocateManager.hpp" />
     <ClInclude Include="FBXShared.h" />
     <ClInclude Include="FBXUtilites.h" />
     <ClInclude Include="resource.h" />
@@ -89,7 +90,7 @@
     <ProjectGuid>{AE89CFD7-6000-418C-9DE5-1C235DE41310}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>FBXModule</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
