--- a/FBXModule/FBXModule.vcxproj.filters
+++ b/FBXModule/FBXModule.vcxproj.filters
@@ -86,6 +86,7 @@
     <ClInclude Include="..\include\FBXConfig.hpp">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="AllocateManager.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
