--- a/FBXModule/FBXModule.vcxproj.filters
+++ b/FBXModule/FBXModule.vcxproj.filters
@@ -98,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="FBXMath.h" />
+    <None Include="Export.def" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="FBXModule.rc" />
